Ajustando os scripts para facilitar o entendimento

--- a/analise/analise_comparativa.ipynb
+++ b/analise/analise_comparativa.ipynb
@@ -15,14 +15,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\freda\\AppData\\Local\\Temp\\ipykernel_49880\\3706224011.py:2: DtypeWarning: Columns (0,1,19) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\freda\\AppData\\Local\\Temp\\ipykernel_42364\\3706224011.py:2: DtypeWarning: Columns (0,1,19) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df2024 = pd.read_csv(r'c:\\Repos\\tcc-bruna\\fonte.csv')\n"
      ]
     }
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,12 +136,14 @@
     "    ## Retornar a tabela de df_aposentadoria\n",
     "    return df_aposentadoria\n",
     "\n",
-    "df_aposentadoria = identificar_aposentadoria(df_bibliotecas24_resolvido)"
+    "df_aposentadoria = identificar_aposentadoria(df_bibliotecas24_resolvido)\n",
+    "\n",
+    "df_aposentadoria"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +286,7 @@
     "setores_contagem_24 = contar_servidores_por_setor(df_bibliotecas24, 2024)\n",
     "setores_contagem_19 = contar_servidores_por_setor(df_bibliotecas19, 2019)\n",
     "\n",
-    "##TODO: Verificar se a data de início no df 2024 é o mesmo do df 2019 para todos os servidores, se for diferente considerar a data de início do df 2019\n",
+    "df_bibliotecas24\n",
     "\n",
     "\n",
     "\n",
@@ -295,16 +297,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total de servidores em 2019: 363\n",
-      "Total de servidores em 2024: 339\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SETOR</th>\n",
+       "      <th>QUANTIDADE</th>\n",
+       "      <th>QUANTIDADE_NAO_APTOS_A_APOSENTAR</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>SUPERVISAO DE BIBLIOTECAS</td>\n",
+       "      <td>36</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>COORDENACAO DO SISTEMA MUNICIPAL DE BIBLIOTECAS</td>\n",
+       "      <td>14</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>BIBLIOTECA PUBLICA MUNICIPAL MONTEIRO LOBATO</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>BIBLIOTECA PUBLICA MUNICIPAL AFONSO SCHIMIDT</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>BIBLIOTECA PUBLICA MUNICIPAL RAIMUNDO DE MENEZES</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>BIBLIOTECA PUBLICA MUNICIPAL VINICIUS DE MORAES</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>BIBLIOTECA PUBLICA MUNICIPAL RICARDO RAMOS</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>BIBLIOTECA PUBLICA MUNICIPAL PE. JOSE DE ANCHIETA</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>BIBLIOTECA PUBLICA MUNICIPAL JOVINA ROCHA ALVARES</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>BIBLIOTECA PUBLICA MUNICIPAL ALVARES DE AZEVEDO</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               SETOR  QUANTIDADE  \\\n",
+       "0                          SUPERVISAO DE BIBLIOTECAS          36   \n",
+       "1    COORDENACAO DO SISTEMA MUNICIPAL DE BIBLIOTECAS          14   \n",
+       "2       BIBLIOTECA PUBLICA MUNICIPAL MONTEIRO LOBATO          12   \n",
+       "3       BIBLIOTECA PUBLICA MUNICIPAL AFONSO SCHIMIDT          11   \n",
+       "4   BIBLIOTECA PUBLICA MUNICIPAL RAIMUNDO DE MENEZES           9   \n",
+       "5    BIBLIOTECA PUBLICA MUNICIPAL VINICIUS DE MORAES           8   \n",
+       "6         BIBLIOTECA PUBLICA MUNICIPAL RICARDO RAMOS           8   \n",
+       "7  BIBLIOTECA PUBLICA MUNICIPAL PE. JOSE DE ANCHIETA           8   \n",
+       "8  BIBLIOTECA PUBLICA MUNICIPAL JOVINA ROCHA ALVARES           8   \n",
+       "9    BIBLIOTECA PUBLICA MUNICIPAL ALVARES DE AZEVEDO           8   \n",
+       "\n",
+       "   QUANTIDADE_NAO_APTOS_A_APOSENTAR  \n",
+       "0                                 3  \n",
+       "1                                 2  \n",
+       "2                                 2  \n",
+       "3                                 1  \n",
+       "4                                 1  \n",
+       "5                                 1  \n",
+       "6                                 2  \n",
+       "7                                 2  \n",
+       "8                                 0  \n",
+       "9                                 0  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -315,13 +430,63 @@
     "comparativo['2019'] = comparativo['2019'].astype(int)\n",
     "comparativo['2024'] = comparativo['2024'].astype(int)\n",
     "comparativo = comparativo.sort_values(by='2024', ascending=False)\n",
-    "print(f'Comparativo entre 2019 e 2024:\\n{comparativo}')\n",
+    "# print(f'Comparativo entre 2019 e 2024:\\n{comparativo}')\n",
     "\n",
     "## Queremos uma tabela com o total de servidores em 2019 e 2024\n",
     "total_2019 = setores_contagem_19['QUANTIDADE'].sum()\n",
     "total_2024 = setores_contagem_24['QUANTIDADE'].sum()\n",
-    "print(f'Total de servidores em 2019: {total_2019}')\n",
-    "print(f'Total de servidores em 2024: {total_2024}')\n"
+    "# print(f'Total de servidores em 2019: {total_2019}')\n",
+    "# print(f'Total de servidores em 2024: {total_2024}')\n",
+    "\n",
+    "\n",
+    "## Criaremos uma função que gerará uma tabela com as colunas SETOR, QUANTIDADE_SERVIDORES, e QUANTIDADE_APTOS_A_APOSENTAR\n",
+    "\n",
+    "def comparativo_aposentadoria(df_aposentadoria, setores_contagem_24):\n",
+    "    ## Criar uma nova tabela com o nome do setor, a quantidade de servidores em 2024 e a quantidade de servidores aptos a se aposentar em 2024\n",
+    "    df_aposentadoria_por_setor = pd.merge(setores_contagem_24, df_aposentadoria['SETOR'].value_counts().reset_index(), on='SETOR', how='left')\n",
+    "    df_aposentadoria_por_setor.columns = ['SETOR', 'QUANTIDADE_SERVIDORES', 'QUANTIDADE_APTOS_A_APOSENTAR']\n",
+    "    df_aposentadoria_por_setor = df_aposentadoria_por_setor.fillna(0)\n",
+    "\n",
+    "    # Criar uma coluna com a subtração entre a quantidade de servidores e a quantidade de servidores aptos a se aposentar\n",
+    "    df_aposentadoria_por_setor['QUANTIDADE_NAO_APTOS_A_APOSENTAR'] = df_aposentadoria_por_setor['QUANTIDADE_SERVIDORES'] - df_aposentadoria_por_setor['QUANTIDADE_APTOS_A_APOSENTAR']\n",
+    "    \n",
+    "    # Transformar os valores float em int\n",
+    "    df_aposentadoria_por_setor['QUANTIDADE_SERVIDORES'] = df_aposentadoria_por_setor['QUANTIDADE_SERVIDORES'].astype(int)\n",
+    "    df_aposentadoria_por_setor['QUANTIDADE_APTOS_A_APOSENTAR'] = df_aposentadoria_por_setor['QUANTIDADE_APTOS_A_APOSENTAR'].astype(int)\n",
+    "    df_aposentadoria_por_setor['QUANTIDADE_NAO_APTOS_A_APOSENTAR'] = df_aposentadoria_por_setor['QUANTIDADE_NAO_APTOS_A_APOSENTAR'].astype(int)\n",
+    "\n",
+    "    return df_aposentadoria_por_setor\n",
+    "\n",
+    "\n",
+    "df_aposentadoria_por_setor = comparativo_aposentadoria(df_aposentadoria, setores_contagem_24)\n",
+    "\n",
+    "## Criaremos uma função que filtrará os servidores pelo valor da coluna CARGO_BASICO, retornando aqueles que contém a substring 'ANALISTA DE INFORMACOES CULTURA E DESPORTO' no nome do cargo, desses servidores, retornaremos os que possuem a coluna 'APTA_A_APOSENTAR' como False\n",
+    "\n",
+    "def filtrar_analista(df_bibliotecas24_resolvido):\n",
+    "    ## Filtrar os servidores pelo valor da coluna CARGO_BASICO\n",
+    "    df_analista = df_bibliotecas24_resolvido[df_bibliotecas24_resolvido['CARGO_BASICO'].str.contains('ANALISTA DE INFORMACOES CULTURA E DESPORTO')]\n",
+    "    ## Filtrar os servidores que possuem a coluna 'APTA_A_APOSENTAR' como False\n",
+    "    df_analista_nao_apto = df_analista[df_analista['APTA_A_APOSENTAR'] == False]\n",
+    "    return df_analista_nao_apto\n",
+    "\n",
+    "df_analista_nao_apto = filtrar_analista(df_bibliotecas24_resolvido)\n",
+    "\n",
+    "##Criaremos uma função que gerará uma tabela com as colunas SETOR, QUANTIDADE_SERVIDORES, e QUANTIDADE_NAO_APTOS_A_APOSENTAR, considerando apenas os servidores analistas\n",
+    "\n",
+    "def comparativo_aposentadoria_analista(df_analista_nao_apto):\n",
+    "    ## Criar uma nova tabela com o nome do setor, a quantidade de servidores em 2024 e a quantidade de servidores não aptos a se aposentar em 2024, se o número for zero, preencheremos com zero\n",
+    "    df_analista_nao_apto_por_setor = df_analista_nao_apto['SETOR'].value_counts().reset_index()\n",
+    "    df_analista_nao_apto_por_setor.columns = ['SETOR', 'QUANTIDADE_NAO_APTOS_A_APOSENTAR']\n",
+    "    df_analista_nao_apto_por_setor = pd.merge(setores_contagem_24, df_analista_nao_apto_por_setor, on='SETOR', how='left')\n",
+    "    df_analista_nao_apto_por_setor = df_analista_nao_apto_por_setor.fillna(0)\n",
+    "    df_analista_nao_apto_por_setor['QUANTIDADE_NAO_APTOS_A_APOSENTAR'] = df_analista_nao_apto_por_setor['QUANTIDADE_NAO_APTOS_A_APOSENTAR'].astype(int)\n",
+    "    \n",
+    "    \n",
+    "\n",
+    "    return df_analista_nao_apto_por_setor\n",
+    "\n",
+    "df_analista_nao_apto_por_setor = comparativo_aposentadoria_analista(df_analista_nao_apto)\n",
+    "df_analista_nao_apto_por_setor.head(10)"
    ]
   },
   {
