--- a/analise/analise_comparativa_v3.ipynb
+++ b/analise/analise_comparativa_v3.ipynb
@@ -2,9 +2,42 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: pandas in c:\\users\\freda\\appdata\\roaming\\python\\python310\\site-packages (2.2.2)\n",
+      "Requirement already satisfied: matplotlib in c:\\users\\freda\\appdata\\roaming\\python\\python310\\site-packages (3.9.0)\n",
+      "Requirement already satisfied: numpy>=1.22.4 in c:\\users\\freda\\appdata\\roaming\\python\\python310\\site-packages (from pandas) (1.23.5)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\freda\\appdata\\roaming\\python\\python310\\site-packages (from pandas) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\freda\\appdata\\roaming\\python\\python310\\site-packages (from pandas) (2024.1)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\freda\\appdata\\roaming\\python\\python310\\site-packages (from pandas) (2024.1)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in c:\\users\\freda\\appdata\\roaming\\python\\python310\\site-packages (from matplotlib) (1.2.1)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\freda\\appdata\\roaming\\python\\python310\\site-packages (from matplotlib) (0.12.1)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\freda\\appdata\\roaming\\python\\python310\\site-packages (from matplotlib) (4.51.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.3.1 in c:\\users\\freda\\appdata\\roaming\\python\\python310\\site-packages (from matplotlib) (1.4.5)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\freda\\appdata\\roaming\\python\\python310\\site-packages (from matplotlib) (24.0)\n",
+      "Requirement already satisfied: pillow>=8 in c:\\users\\freda\\appdata\\roaming\\python\\python310\\site-packages (from matplotlib) (10.3.0)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in c:\\users\\freda\\appdata\\roaming\\python\\python310\\site-packages (from matplotlib) (3.1.2)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\freda\\appdata\\roaming\\python\\python310\\site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "DEPRECATION: omegaconf 2.0.6 has a non-standard dependency specifier PyYAML>=5.1.*. pip 24.1 will enforce this behaviour change. A possible replacement is to upgrade to a newer version of omegaconf or contact the author to suggest that they release a version with a conforming dependency specifiers. Discussion can be found at https://github.com/pypa/pip/issues/12063\n",
+      "\n",
+      "[notice] A new release of pip is available: 24.0 -> 24.1.2\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
    "source": [
     "#Instalando as bibliotecas necessárias\n",
     "%pip install pandas matplotlib\n"
@@ -12,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,9 +56,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\freda\\AppData\\Local\\Temp\\ipykernel_5700\\1455569193.py:3: DtypeWarning: Columns (0,1,19) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df2024 = pd.read_csv(r'C:\\Repos\\tcc-bruna\\fonte.csv')\n"
+     ]
+    }
+   ],
    "source": [
     "## Carregando os arquivos para o ambiente\n",
     "def carregar_dados():\n",
@@ -38,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,9 +125,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 339 entries, 115 to 127354\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column              Non-Null Count  Dtype         \n",
+      "---  ------              --------------  -----         \n",
+      " 0   REGISTRO            339 non-null    object        \n",
+      " 1   NOME                339 non-null    object        \n",
+      " 2   CARGO_BASICO        339 non-null    object        \n",
+      " 3   SEGMENTO            107 non-null    object        \n",
+      " 4   SUBGRUPO            339 non-null    object        \n",
+      " 5   ESCOL_CARGO_BASICO  339 non-null    object        \n",
+      " 6   CARGO_COMISSAO      68 non-null     object        \n",
+      " 7   DATA_INICIO_EXERC   339 non-null    datetime64[ns]\n",
+      " 8   REL_JUR_ADM         339 non-null    object        \n",
+      " 9   SECRET_SUBPREF      339 non-null    object        \n",
+      " 10  SETOR               339 non-null    object        \n",
+      " 11  SEXO                339 non-null    object        \n",
+      " 12  ANO_NASCIMENTO      339 non-null    int32         \n",
+      "dtypes: datetime64[ns](1), int32(1), object(11)\n",
+      "memory usage: 35.8+ KB\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 363 entries, 151 to 121748\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column              Non-Null Count  Dtype         \n",
+      "---  ------              --------------  -----         \n",
+      " 0   REGISTRO            363 non-null    int64         \n",
+      " 1   NOME                363 non-null    object        \n",
+      " 2   CARGO_BASICO        363 non-null    object        \n",
+      " 3   SEGMENTO            346 non-null    object        \n",
+      " 4   SUBGRUPO            363 non-null    object        \n",
+      " 5   ESCOL_CARGO_BASICO  363 non-null    object        \n",
+      " 6   CARGO_COMISSAO      72 non-null     object        \n",
+      " 7   DATA_INICIO_EXERC   363 non-null    datetime64[ns]\n",
+      " 8   REL_JUR_ADM         363 non-null    object        \n",
+      " 9   SECRET_SUBPREF      363 non-null    object        \n",
+      " 10  SETOR               363 non-null    object        \n",
+      " 11  SEXO                363 non-null    object        \n",
+      " 12  ANO_NASCIMENTO      363 non-null    int32         \n",
+      "dtypes: datetime64[ns](1), int32(1), int64(1), object(10)\n",
+      "memory usage: 38.3+ KB\n"
+     ]
+    }
+   ],
    "source": [
     "## Visualizar o resultado da preparação dos dados\n",
     "\n",
@@ -100,9 +189,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 339 entries, 115 to 127354\n",
+      "Data columns (total 10 columns):\n",
+      " #   Column                      Non-Null Count  Dtype \n",
+      "---  ------                      --------------  ----- \n",
+      " 0   NOME                        339 non-null    object\n",
+      " 1   SEXO                        339 non-null    object\n",
+      " 2   SETOR                       339 non-null    object\n",
+      " 3   CARGO_BASICO                339 non-null    object\n",
+      " 4   IDADE_2024                  339 non-null    int32 \n",
+      " 5   TEMPO_SERVICO_PUBLICO_2024  339 non-null    int32 \n",
+      " 6   APTO_APOSENTADORIA_2024     339 non-null    bool  \n",
+      " 7   IDADE_2029                  339 non-null    int32 \n",
+      " 8   TEMPO_SERVICO_PUBLICO_2029  339 non-null    int32 \n",
+      " 9   APTO_APOSENTADORIA_2029     339 non-null    bool  \n",
+      "dtypes: bool(2), int32(4), object(4)\n",
+      "memory usage: 27.3+ KB\n"
+     ]
+    }
+   ],
    "source": [
     "## Nessa função, vamos analisar a quantidade de servidores e servidoras que poderão se aposentar em 2024 e em 2029. Para isso, vamos considerar as condições da regra de transição (categoria pedágio): Para ambos os sexos, ter mais de 20 anos de serviço público. Para homens, ter mais de 60 anos de idade. Para mulheres, ter mais de 57 anos de idade.\n",
     "\n",
@@ -164,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
